fix pgf indents

--- a/report/sections/section-results-cost-benefit/figure-predicted-actual.tex
+++ b/report/sections/section-results-cost-benefit/figure-predicted-actual.tex
@@ -1,48 +1,48 @@
 \newcommand{\plotpredictedactual}[2]{
   \addplot[
+    color=#2,
+    mark size=0.8pt,
     only marks,
-    mark size = 0.8pt,
-    color = #2,
   ] table [
       col sep=comma,
-      x = predicted,
-      y = actual,
+      x=predicted,
+      y=actual
     ]{#1};
 }
 
 \begin{tikzpicture}
   \begin{groupplot}[
-      group style = {
-          group size = 2 by 2,
-          ylabels at = edge left,
-          xlabels at = edge bottom,
-          vertical sep = 0.7in,
-          horizontal sep = 0.5in,
+      cycle list/Paired,
+      group style={
+          group size=2 by 2,
+          horizontal sep=0.5in,
+          vertical sep=0.7in,
+          xlabels at=edge bottom,
+          ylabels at=edge left
+        },
+      height=1.5in,
+      legend cell align={left},
+      legend pos=south east,
+      legend style={
+          draw=none,
+          font=\small
         },
       scale only axis,
-      width = 2.5in,
-      height = 1.5in,
-      xlabel = Predicted,
-      ylabel = Actual,
-      cycle list/Paired,
-      legend pos = south east,
-      legend style = {
-          draw = none,
-          font = \small,
-        },
-      legend cell align={left},
+      width=2.5in,
+      xlabel=Predicted,
+      ylabel=Actual,
     ]
-    \nextgroupplot[title = English ($n\,{=}\,340$)]
+    \nextgroupplot[title=English ($n\,{=}\,340$)]
     \plotpredictedactual{../results/predictions/embedding=contextual_model_name=bert-base-uncased_language=en_window=1_operation=sum_similarity=cosine.csv}{Paired-A}
-    \node[anchor = north west] at (rel axis cs: 0.05, 0.95) {$r = 0.660$};
-    \nextgroupplot[title = Finnish ($n\,{=}\,24$)]
+    \node[anchor=north west] at (rel axis cs: 0.05, 0.95) {$r\,{=}\,0.660$};
+    \nextgroupplot[title=Finnish ($n\,{=}\,24$)]
     \plotpredictedactual{../results/predictions/embedding=contextual_model_name=TurkuNLP-bert-large-finnish-cased-v1_language=fi_window=1_operation=sum_similarity=cosine.csv}{Paired-B}
-    \node[anchor = north west] at (rel axis cs: 0.05, 0.95) {$r = 0.679$};
-    \nextgroupplot[title = Croatian ($n\,{=}\,112$)]
+    \node[anchor=north west] at (rel axis cs: 0.05, 0.95) {$r\,{=}\,0.679$};
+    \nextgroupplot[title=Croatian ($n\,{=}\,112$)]
     \plotpredictedactual{../results/predictions/embedding=pooled_model_name=EMBEDDIA-crosloengual-bert_language=hr_window=3_operation=sum_similarity=cosine.csv}{Paired-C}
-    \node[anchor = north west] at (rel axis cs: 0.05, 0.95) {$r = 0.717$};
-    \nextgroupplot[title = Slovene ($n\,{=}\,111$)]
+    \node[anchor=north west] at (rel axis cs: 0.05, 0.95) {$r\,{=}\,0.717$};
+    \nextgroupplot[title=Slovene ($n\,{=}\,111$)]
     \plotpredictedactual{../results/predictions/embedding=contextual_model_name=bert-base-multilingual-cased_language=sl_window=3_operation=sum_similarity=cosine.csv}{Paired-D}
-    \node[anchor = north west] at (rel axis cs: 0.05, 0.95) {$r = 0.572$};
+    \node[anchor=north west] at (rel axis cs: 0.05, 0.95) {$r\,{=}\,0.572$};
   \end{groupplot}
 \end{tikzpicture}
