--- a/report/sections/section-results-cost-benefit/table-best-score-evaluation-static.tex
+++ b/report/sections/section-results-cost-benefit/table-best-score-evaluation-static.tex
@@ -1,6 +1,8 @@
-\pgfplotstabletypeset[columns={
+\pgfplotstabletypeset[
+  columns={
       language,
       model_name,
       window,
-      score}]{../results/best/evaluation_best_static.csv}
-\caption{Static}
+      score
+    }
+]{../results/best/evaluation_best_static.csv}
