--- a/report/sections/section-results-hyperparameter-search/table-best-score-practice-static.tex
+++ b/report/sections/section-results-hyperparameter-search/table-best-score-practice-static.tex
@@ -1,6 +1,9 @@
-\pgfplotstabletypeset[columns={
+\pgfplotstabletypeset[
+  columns={
       language,
       model_name,
       window,
       scorepractice,
-      scoreevaluation}]{../results/best/both_best_static.csv}
+      scoreevaluation
+    }
+]{../results/best/both_best_static.csv}
