--- a/report/sections/section-results-cost-benefit/table-best-score-evaluation-pooled.tex
+++ b/report/sections/section-results-cost-benefit/table-best-score-evaluation-pooled.tex
@@ -1,9 +1,15 @@
-\pgfplotstabletypeset[columns={
+\pgfplotstabletypeset[
+  columns={
       language,
       model_name,
       window,
-      score},
+      score
+    },
   every row 2 column 3/.append style={
       postproc cell content/.append code={
           \pgfkeysgetvalue{/pgfplots/table/@cell content}{\besttemp}
-          \pgfkeysalso{best/.expand once={\besttemp}}}}]{../results/best/evaluation_best_pooled.csv}
+          \pgfkeysalso{best/.expand once={\besttemp}
+          }
+        }
+    }
+]{../results/best/evaluation_best_pooled.csv}
