--- a/report/sections/section-results-cost-benefit/table-best-score-evaluation.tex
+++ b/report/sections/section-results-cost-benefit/table-best-score-evaluation.tex
@@ -4,9 +4,12 @@
   columns/model_name/.style={
       column name=Model name,
       column type={L{3in}},
-      string type,
       postproc cell content/.append style={
-          @cell content={\texttt{##1}}}},
+          @cell content={\texttt{##1}
+            }
+        },
+      string type
+    },
 }
 
 \pgfplotsset{
