--- a/report/sections/section-results-cost-benefit.tex
+++ b/report/sections/section-results-cost-benefit.tex
@@ -82,7 +82,7 @@ than static embeddings for this task.
 
 \input{sections/section-results-cost-benefit/table-significance}
 
-\begin{table}[h!]
+\begin{table}[ht!]
   \centering
   \begin{subfigure}{\textwidth}
     \centering
